--- a/ProgettoSettimana10/ProgettoSettimana10/src/app/components/completati/completati.component.html
+++ b/ProgettoSettimana10/ProgettoSettimana10/src/app/components/completati/completati.component.html
@@ -1,10 +1,14 @@
 <main>
   <div
-    [ngStyle]="{ opacity: opacity ? '1' : '0' }"
-    class="d-flex justify-content-center"
+  *ngIf="opacity"
+    class="d-flex flex-column justify-content-center"
   >
-    <div class="spinner-border text-info me-4" role="status">
-      <span class="visually-hidden">Loading...</span>
+
+    <div  class="spinner">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
     <div class="text-center">
       <p>Recupero Tasks...</p>
@@ -12,7 +16,7 @@
   </div>
   <div [ngStyle]="{ opacity: opacity ? '0' : '1' }">
     <div class="container d-flex justify-content-center">
-      <table class="table table-success table-striped w-50 border border-info">
+      <table class="table table-success w-50 border border-info">
         <tbody>
           <tr *ngFor="let todo of todoArrayCompleted">
             <th scope="row" *ngIf="todo !== undefined" class="text-center">
