--- a/ProgettoSettimana10/ProgettoSettimana10/src/styles.scss
+++ b/ProgettoSettimana10/ProgettoSettimana10/src/styles.scss
@@ -1,1 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
+.spinner {
+  overflow: hidden;
+  width: 100vw;
+}
+
+.spinner span {
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  background-color: black;
+  border-radius: 50%;
+  animation: move 2s infinite cubic-bezier(.12,.73,.92,.18);
+}
+.spinner span:nth-child(2) {
+  animation-delay: 150ms;
+}
+.spinner span:nth-child(3) {
+  animation-delay: 100ms;
+}
+.spinner span:nth-child(4) {
+  animation-delay: 250ms;
+}
+@keyframes move {
+  0% {transform: translateX(0vw);}
+  100% {transform: translateX(100vw);}
+}
