--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/auth/register/register.component.html
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/auth/register/register.component.html
@@ -17,7 +17,7 @@
       <label for="password">Inserisci password</label>
       <input type="password" id="password" name="password" class="form-control" required ngModel>
     </div>
-    <button type="submit" [disabled]="form.invalid" class="btn btn-primary">Registrati</button>
+    <button type="submit" [disabled]="form.invalid" class="btn btn-primary mb-5">Registrati</button>
     <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status"></span>
    </form>
 
