--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/profile/profile.component.scss
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/profile/profile.component.scss
@@ -1,13 +1,14 @@
-
-
+.profile-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
 .card {
-  background-color: #111;
-  border: none;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-
   max-width: 540px;
-  width: 90%;
+  margin: 0 auto;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .card-body {
@@ -17,16 +18,14 @@
 .card-title {
   font-size: 1.5rem;
   font-weight: bold;
-  margin-bottom: 0.5rem;
+  text-align: center;
 }
 
 .card-text {
   font-size: 1rem;
-  margin-bottom: 0;
+  margin-bottom: 0.5rem;
 }
 
-h5{
-  color:white
+.registration-date {
+  color: #999;
 }
-
-
