--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/styles.scss
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/styles.scss
@@ -1,24 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 
-html,
-body {
-  height: 100%;
-}
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #00050d;
+  background: linear-gradient(to bottom, #000000, #373737);
+  color: #fff;
 
 }
 main {
   margin-top: 100px;
+  height: 100vh;
 }
 
-html,
-body {
-  height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
+
