--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movies/movies.component.scss
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movies/movies.component.scss
@@ -1,8 +1,6 @@
 main{
   color: white;
-  .card-body{
-    color: white;
-  }
+  margin-bottom: 50px;
 }
 
 a{
@@ -24,7 +22,9 @@ i{
   border: none;
   box-shadow: none;
 }
-
+.card-body{
+    color: white;
+  }
 }
 
 
