--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/styles.scss
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/styles.scss
@@ -6,11 +6,11 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background: linear-gradient(to bottom, #000000, #373737);
   color: #fff;
-
+  height: 2000px;
 }
 main {
   margin-top: 100px;
-  height: 100vh;
+
 }
 
 
