--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movies/movies.component.html
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movies/movies.component.html
@@ -1,28 +1,26 @@
 
-<main>
+ <main>
   <h1 class="text-center">I film del momento</h1>
   <section class="d-flex justify-content-between flex-wrap container">
     <div *ngFor="let movie of movies; let i = index">
-
       <div class="card m-2" style="width: 200px">
-        <img class="rounded" [src]="'http://image.tmdb.org/t/p/w500' + movie.poster_path" class="card-img-top"
-          [alt]="movie.title" />
+        <img class="rounded" [src]="'http://image.tmdb.org/t/p/w500' + movie.poster_path" class="card-img-top" [alt]="movie.title" />
         <div class="card-body" style="background-color: black">
-          <h3 class="card-title text-center" style="height: 70px">
-            {{ movie.title }}
-          </h3>
-
-          <a *ngIf="!isMovieInlistFavorite(movie.id)" class="btn btn-primary rounded-circle" (click)="addTolistFavorite(movie.id)" title="Aggiungi alla Lista">
+          <h3 class="card-title text-center" style="height: 70px">{{ movie.title }}</h3>
+          <div class="d-flex justify-content-between">
+            <a *ngIf="!isMovieInlistFavorite(movie.id)" class="btn btn-primary rounded-circle" (click)="addTolistFavorite(movie.id)" title="Aggiungi alla Lista">
             <i class="bi bi-plus-circle"></i>
           </a>
-
           <a *ngIf="isMovieInlistFavorite(movie.id)" class="btn btn-primary rounded-circle" (click)="removeFromlistFavorite(movie.id)" title="Rimuovi dalla Lista">
-            <i style="color: red;" class="bi bi-x-circle"></i>
+            <i class="bi bi-check-lg"></i>
           </a>
+          <a class="btn btn-primary rounded-circle" [routerLink]="['/movie-detail', movie.id]" title="Dai un'occhiata ai dettagli">
+            <i class="bi bi-info-circle"></i>
+          </a>
+          </div>
+
         </div>
       </div>
-
     </div>
   </section>
 </main>
-
