--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/footer/footer.component.html
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <ul class="d-flex w-100 align-items-center justify-content-between">
       <div class="d-flex">
-        <li id="logo">epic movie</li>
+        <li id="logo">epic video</li>
         <li>Termini</li>
         <li>Privacy</li>
       </div>
