--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movies/movies.component.html
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movies/movies.component.html
@@ -1,4 +1,3 @@
-
  <main>
   <div class="form-group mb-5">
 
@@ -11,7 +10,8 @@
   </div>
 
   <h1 class="text-center">I film del momento</h1>
-  <section class="d-flex justify-content-between flex-wrap container">
+  <section class="d-flex justify-content-between flex-wrap container mb-5
+1 \AQ0">
     <div *ngIf="movies?.length === 0" class="text-center">
       Nessun film corrispondente al genere selezionato.
     </div>
