--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/navbar/navbar.component.html
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-center">
     <nav class="navbar navbar-expand-lg fixed-top mx-5 mt-3 rounded">
       <div class="container-fluid">
-        <a class="navbar-brand" id="logo">epic video</a>
+        <a class="navbar-brand" id="logo" [routerLink]="['/movies']" routerLinkActive="active">epic video</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
