--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movie-detail/movie-detail.component.html
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movie-detail/movie-detail.component.html
@@ -3,9 +3,12 @@
     <img class="card-img-top" [src]="'http://image.tmdb.org/t/p/w500' + movie?.poster_path" [alt]="movie?.title" />
     <div class="card-body">
       <h2 class="card-title">{{ movie?.title }}</h2>
-      <p class="card-text">{{ movie?.release_date }}</p>
+
       <p class="card-text"> {{ movie?.overview }}</p>
-      <p class="card-text">IMDb {{movie?.vote_average}}</p>
+      <div class="d-flex justify-content-between">
+        <p class="card-text">IMDb {{movie?.vote_average}}</p>
+        <p class="card-text">{{ movie?.release_date }}</p>
+      </div>
 
     </div>
   </div>
@@ -13,5 +16,3 @@
 
 
 </main>
-
-
