--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movies/movies.component.scss
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movies/movies.component.scss
@@ -26,3 +26,31 @@ i{
     color: white;
   }
 }
+.input-search {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.input-search input[type="text"] {
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  flex: 1;
+  margin-right: 10px;
+}
+
+.input-search a {
+  display: inline-block;
+  padding: 10px;
+  background-color: transparent;
+  color: #fff;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.input-search a:hover {
+  background-color: #0056b3;
+  border-radius: 100%;
+}
