--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movie-detail/movie-detail.component.html
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movie-detail/movie-detail.component.html
@@ -13,7 +13,7 @@
 
     </div>
   </div>
-
-
+  <!-- //Ho provato a far vedere anche il trailer...il codice funziona ma Youtube non me lo permette per autorizzazioni :( -->
+  <!-- <iframe [src]="trailer" frameborder="0" width="300px"></iframe> -->
 
 </main>
