--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/auth/login/login.component.html
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <main>
   <div class="container">
     <h1 class="text-center">Sei proprio tu John Wayne?</h1>
-    <form #form="ngForm" (ngSubmit)="accedi(form)">
+    <form #form="ngForm" (ngSubmit)="access(form)">
       <div class="form-group">
         <label for="email">Email</label>
         <input type="email" name="email" id="email" class="form-control" required ngModel />
