--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movies/movies.component.html
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movies/movies.component.html
@@ -25,8 +25,7 @@
       Nessun film corrispondente alla ricerca
     </div>
     <div *ngFor="let movie of movies let i = index">
-      <div class="card rounded m-2" style="width: 200px; background-image: url('http://image.tmdb.org/t/p/w500{{ movie.poster_path }}');">        <!-- <img class="rounded" height="200px" [src]="'http://image.tmdb.org/t/p/w500' + movie.poster_path" class="card-img-top"
-          [alt]="movie.title" /> -->
+      <div class="card rounded m-2" style="width: 200px; background-image: url('http://image.tmdb.org/t/p/w500{{ movie.poster_path }}');">
         <div class="card-body" >
           <h3 class="card-title text-center">{{ movie.title }}</h3>
           <div class="d-flex justify-content-between">
