--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/navbar/navbar.component.html
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/navbar/navbar.component.html
@@ -9,9 +9,15 @@
         </button>
         <div class="collapse navbar-collapse me-0" id="navbarSupportedContent">
           <ul class="navbar-nav me-0 mb-2 mb-lg-0 d-flex justify-content-between align-items-center w-100">
-            <li class="nav-item" *ngIf="user">
+            <div class="d-flex">
+              <li class="nav-item" *ngIf="user">
               <a class="nav-link" aria-current="page" [routerLink]="['/movies']" routerLinkActive="active" style="color: aliceblue;">Movies</a>
             </li>
+            <li class="nav-item" *ngIf="user">
+              <a class="nav-link" aria-current="page" [routerLink]="['/favorite']" routerLinkActive="active" style="color: aliceblue;">Preferiti</a>
+            </li>
+            </div>
+
 
             <li class="nav-item" *ngIf="!user">
               <a class="nav-link" [routerLink]="['/register']" routerLinkActive="active"></a>
