--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movie-detail/movie-detail.component.html
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movie-detail/movie-detail.component.html
@@ -1,18 +1,13 @@
 <main>
-
   <div class="card text-center">
     <img class="card-img-top" [src]="'http://image.tmdb.org/t/p/w500' + movie?.poster_path" [alt]="movie?.title" />
     <div class="card-body">
       <h2 class="card-title">{{ movie?.title }}</h2>
-
-      <p class="card-text"> {{ movie?.overview }}</p>
+      <p class="card-text" [style.white-space]="'pre-line'">{{ movie?.overview.length ? movie?.overview : 'Non ci sono informazioni sulla trama del film:\n"' + movie?.title + '"' }}</p>
       <div class="d-flex justify-content-between">
-        <p class="card-text">IMDb {{movie?.vote_average}}</p>
         <p class="card-text">{{ movie?.release_date }}</p>
       </div>
-
     </div>
-
+    <div class="vote-average">{{ movie?.vote_average }}</div>
   </div>
-
 </main>
