--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movie-detail/movie-detail.component.html
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movie-detail/movie-detail.component.html
@@ -1,20 +1,65 @@
 <main>
-  <section class="d-flex container">
-    <div class="card text-center">
-    <img class="card-img-top" [src]="'http://image.tmdb.org/t/p/w500' + movie?.poster_path" [alt]="movie?.title" />
-    <div class="card-body">
-      <h2 class="card-title">{{ movie?.title }}</h2>
-      <p class="card-text" [style.white-space]="'pre-line'">{{ movie?.overview.length ? movie?.overview : 'Non ci sono informazioni sulla trama del film:\n"' + movie?.title + '"' }}</p>
-      <div class="d-flex justify-content-between">
-        <p class="card-text">{{ movie?.release_date }}</p>
+  <section class="d-flex flex-column container ">
+    <div id="carouselExample" class="carousel slide carousel-fade">
+      <div class="carousel-inner mb-3">
+
+        <div class="carousel-item" *ngFor="let item of movieYT.items"
+          [ngClass]="{ 'active': item === movieYT.items[0] }">
+          <div class="d-flex justify-content-center">
+            <img [src]="item.snippet.thumbnails.medium.url" class="d-block w-25" alt="...">
+          </div>
+
+       </div>
+
+
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <div class="vote-average">{{ movie?.vote_average }}</div>
+
+    <div class="d-flex flex-column">
+      <div class="card text-center">
+        <img class="card-img-top" [src]="'http://image.tmdb.org/t/p/w500' + movie?.poster_path" [alt]="movie?.title" />
+        <div class="card-img-overlay d-flex flex-column justify-content-end">
+          <h2 class="card-title">{{ movie?.title }}</h2>
+          <p class="card-text" [style.white-space]="'pre-line'">{{ movie?.overview.length ? movie?.overview : 'Non cisono informazioni sulla trama del film:\n' + movie?.title + '"' }}</p>
+          <p class="card-text">{{ movie?.release_date }}</p>
+
+        </div>
+        <div class="vote-average">{{ movie?.vote_average }}</div>
+      </div>
+      <div class="text-center mt-3">
+         <a (click)="openModal()" class="btn btn-primary w-25">Guarda il trailer</a>
+      </div>
+
+    </div>
 
 
-
-  </div>
-   <iframe id="ytplayer" type="text/html" width="640" height="360" [src]="safeVideoUrl" frameborder="0"></iframe>
   </section>
 
+
+  <div class="modal fade" id="trailerModal" tabindex="-1" role="dialog" aria-labelledby="trailerModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+
+        <div class="modal-body">
+          <div class="d-flex justify-content-between align-items-center">
+             <h3 class="modal-title" id="trailerModalLabel">{{ movie?.title }} - Trailer</h3>
+          <a type="button" class="btn btn-primary rounded-circle mb-3" (click)="closeModal()" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </a>
+          </div>
+
+          <iframe type="text/html" width="100%" height="360" [src]="safeVideoUrl" frameborder="0"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
