--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movie-detail/movie-detail.component.scss
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movie-detail/movie-detail.component.scss
@@ -1,6 +1,7 @@
 .card {
   max-width: 400px;
   margin: 0 auto;
+  border: none;
 }
 
 .movie-details {
@@ -42,4 +43,19 @@ a {
   color: white;
   background-color: rgba(0, 0, 0, 0.5);
   padding: 5px;
+}
+
+.card-img-overlay{
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1));
+
+  h2,p{
+  color: white;
+}
+}
+
+.modal-body{
+  background: linear-gradient( rgba(0, 0, 0),rgba(0, 0, 0, 0.9));
+  h3{
+    font-size: 20px;
+  }
 }
