--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/favorite/favorite.component.scss
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/favorite/favorite.component.scss
@@ -1,14 +1,16 @@
-main{
+main {
   color: white;
   margin-top: 250px;
 }
 
-a{
+a {
   background-color: transparent;
+  background-color: hsla(0, 0%, 100%, 0.2);
   border: none;
-i{
-  font-size: 20px;
-}
+
+  i {
+    font-size: 20px;
+  }
 
 
 }
@@ -18,25 +20,30 @@ i{
   border: none;
   box-shadow: none;
   background-size: cover;
-&:hover {
-  transform: scale(1.05);
-  border: none;
-  box-shadow: none;
 
-}
-img{
-  overflow: hidden;
-}
-.card-body{
+  &:hover {
+    transform: scale(1.05);
+    border: none;
+    box-shadow: none;
+
+  }
+
+  img {
+    overflow: hidden;
+  }
+
+  .card-body {
     color: white;
     background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.2));
-    h3{
+
+    h3 {
       height: 135px;
       font-weight: 500;
     }
   }
 
 }
+
 .input-search {
   display: flex;
   align-items: center;
