--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movie-detail/movie-detail.component.scss
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movie-detail/movie-detail.component.scss
@@ -24,6 +24,9 @@
 
 a {
   text-decoration: none;
+  background-color: hsla(0, 0%, 100%, 0.2);
+  border: none;
+
 
   &:hover {
     color: black;
@@ -45,17 +48,19 @@ a {
   padding: 5px;
 }
 
-.card-img-overlay{
+.card-img-overlay {
   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1));
 
-  h2,p{
-  color: white;
-}
+  h2,
+  p {
+    color: white;
+  }
 }
 
-.modal-body{
-  background: linear-gradient( rgba(0, 0, 0),rgba(0, 0, 0, 0.9));
-  h3{
+.modal-body {
+  background: linear-gradient(rgba(0, 0, 0), rgba(0, 0, 0, 0.9));
+
+  h3 {
     font-size: 20px;
   }
 }
