--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movies/movies.component.scss
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/movies/movies.component.scss
@@ -1,16 +1,19 @@
-main{
+main {
   color: white;
   margin-bottom: 50px;
 }
 
-a{
-  background-color: transparent;
+a {
+  background-color: hsla(0, 0%, 100%, 0.2);
   border: none;
-i{
-  font-size: 20px;
+}
+a:hover {
+  background-color: #0056b3;
 }
 
 
+a i {
+  font-size: 20px;
 }
 
 .card {
@@ -18,25 +21,28 @@ i{
   border: none;
   box-shadow: none;
   background-size: cover;
-&:hover {
+}
+
+.card:hover {
   transform: scale(1.05);
   border: none;
   box-shadow: none;
-
 }
-img{
+
+.card img {
   overflow: hidden;
 }
-.card-body{
-    color: white;
-    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.2));
-    h3{
-      height: 135px;
-      font-weight: 500;
-    }
-  }
 
+.card-body {
+  color: white;
+  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.2));
 }
+
+.card-body h3 {
+  height: 135px;
+  font-weight: 500;
+}
+
 .input-search {
   display: flex;
   align-items: center;
