--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/navbar/navbar.component.html
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/src/app/components/navbar/navbar.component.html
@@ -35,8 +35,8 @@
                 Felice di riaverti a bordo, {{ user.user.nome }}
               </h3>
               <div class="dropdown rounded-circle">
-                <div class="rounded-circle d-flex justify-content-center align-items-center dropdown-toggle"
-                  type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <div class="rounded-circle d-flex justify-content-center align-items-center dropdown-toggle" id="user-div"
+                  type="button" data-bs-toggle="dropdown" aria-expanded="false" style="background-image:url(https://m.media-amazon.com/images/G/02/CerberusPrimeVideo-FN38FSBD/adult-1.png)">
                   <span class="rounded-circle ms-1"></span>
                   <p class="ms-1">
                     {{ user.user.nome[0].toUpperCase()
